# slimebot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.entrypoint.sh  README.md  compose.yaml.example  example-compose.yaml  example-dotenv.env  example-slimebot.toml  slimebot.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  publish.yml  qa.yml  release.yml  rust.yml
macros/: Cargo.toml
macros/src/: lib.rs  tracing_field.rs  tracing_fields.rs
macros/src/attributes/: event.rs  field.rs  mod.rs
macros/src/tracing/: event.rs  field.rs
macros/src/tracing_error/: mod.rs
nortverse/: Cargo.toml
nortverse/src/: client.rs  comic.rs  data.rs  error.rs  lib.rs
nortverse/src/comic/: error.rs
nortverse/src/data/: mongodb.rs
slimebot/: Cargo.toml
slimebot/src/: commands.rs  errors.rs  main.rs
slimebot/src/cli/: mod.rs
slimebot/src/commands/: ban.rs  eightball.rs  flip.rs  januannie.rs  nortverse.rs  pfp.rs  roll.rs  uptime.rs  version.rs
slimebot/src/commands/minecraft/: data.rs  error.rs  players.rs
slimebot/src/commands/minecraft/api/: errors.rs
slimebot/src/commands/roll/: core.rs
slimebot/src/commands/wordle/core/: daily.rs  error.rs  mod.rs  puzzle.rs  words_list.rs
slimebot/src/commands/wordle/core/game/: cache.rs  data.rs  message.rs  mod.rs  options.rs  users.rs
slimebot/src/commands/wordle/core/tests/: daily_wordle.json
slimebot/src/discord/: mod.rs
slimebot/src/discord/watchers/: mod.rs
slimebot/src/framework/: data.rs  event_handler.rs  logging.rs  poise.rs
slimebot/src/framework/config/: mod.rs
slimebot/src/framework/config/app/: bot.rs  mod.rs
slimebot/src/framework/config/env/: db.rs  mod.rs  vault.rs
slimebot/src/framework/config/secrets/: mod.rs
slimebot/src/utils/: format_duration.rs  mod.rs
slimebot/src/utils/serenity/: buttons.rs  channel.rs  id.rs  mod.rs
src/: commands.rs  config.rs  data.rs  db.rs  errors.rs  event_handler.rs  log.rs  logging.rs  main.rs
src/cli/: mod.rs
src/commands/: ban.rs  banban.rs  borzoi.rs  cat.rs  dynasty.rs  eightball.rs  flip.rs  fox.rs  help.rs  januannie.rs  minecraft.rs  nortverse.rs  pfp.rs  ping.rs  repository.rs  roll.rs  uptime.rs  version.rs  wordle.rs
src/commands/ban/: core.rs
src/commands/dynasty/: client.rs  series.rs
src/commands/eightball/: core.rs
src/commands/eightball/core/: macros.rs
src/commands/minecraft/: api.rs  data.rs  error.rs  players.rs
src/commands/minecraft/api/: errors.rs  mod.rs
src/commands/nortverse/: client.rs  comic.rs  data.rs  error.rs  response.rs
src/commands/nortverse/comic/: url.rs
src/commands/nortverse/data/: mongodb.rs
src/commands/roll/: core.rs
src/commands/wordle/core/: as_emoji.rs  daily.rs  data.rs  mod.rs  puzzle.rs  words_list.rs
src/commands/wordle/core/core/: guess.rs  mod.rs  word.rs
src/commands/wordle/core/game/: cache.rs  data.rs  message.rs  mod.rs  options.rs  record.rs
src/config/: guild.rs  mod.rs
src/discord/: bug_reports.rs  commands.rs  framework.rs  mod.rs  sprint.rs
src/discord/commands/: ban.rs  eightball.rs  list.rs  misc.rs  mod.rs  watch_fic.rs
src/discord/commands/games/: mod.rs  wordle.rs
src/discord/commands/roll/: mod.rs  natural.rs
src/discord/commands/utils/: mod.rs  poise.rs
src/discord/commands/wordle/: error.rs  mod.rs
src/discord/utils/: mod.rs  poise.rs
src/discord/watchers/: haiku.rs  mod.rs
src/errors/: tracing_error.rs
src/framework/: config.rs  data.rs  db.rs  event_handler.rs  logging.rs  mod.rs  poise.rs  secrets.rs
src/framework/config/: env.rs  github.rs  mod.rs
src/framework/config/app/: bot.rs  mod.rs
src/framework/config/env/: db.rs  mod.rs  vault.rs
src/framework/config/secrets/: mod.rs  vault.rs
src/framework/data/: error.rs
src/framework/github_bot/: mod.rs
src/framework/secrets/: vault.rs
src/functions/: mod.rs
src/functions/games/wordle/: daily.rs  error.rs  game.rs  mod.rs  options.rs  puzzle.rs  utils.rs  words_list.rs
src/functions/games/wordle/core/: guess.rs  mod.rs  word.rs
src/functions/games/wordle/game/: cache.rs  data.rs  message.rs  mod.rs  options.rs  record.rs  users.rs
src/functions/misc/: eightball.rs  mod.rs
src/functions/misc/roll/: mod.rs  natural.rs
src/games/wordle/: daily.rs  game.rs  mod.rs  options.rs  puzzle.rs  utils.rs  words_list.rs
src/games/wordle/core/: guess.rs  mod.rs  word.rs
src/utils/: mod.rs  poise.rs
src/utils/serenity/: buttons.rs  channel.rs  component_interaction.rs  id.rs  mod.rs
static/: biden_L_url.txt  look_cl_copypasta.txt
