[package]
name = "slimebot"
version = "1.3.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
lto = false
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
chrono = { version = "0.4.31", default-features = false }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dotenv = "0.15.0"
mongodb = "2.8.0"
openssl = "0.10.62"
poise = "0.5.5"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = true }
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
tokio = "1.32.0"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi"], default-features = false }
tracing-unwrap = { version = "0.10.0", default-features = false }
