[package]
name = "slimebot"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"
version = "1.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
lto = false
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
chrono = { version = "0.4.31", default-features = false }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
hyphenation = { version = "0.8.4", features = ["embed_en-us"] }
mongodb = "2.8.0"
openssl = { version = "0.10.62", features = ["vendored"] }
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.18", default-features = true, features = ["json"] }
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
thiserror = "1.0.57"
tokio = "1.32.0"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi"], default-features = false }
tracing-test = "0.2.4"
tracing-unwrap = { version = "0.10.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"
