[package]
name = "slimebot"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"
version = "1.7.6"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
lto = false
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
arc-swap = "1.7.1"
chrono = { version = "0.4.31", default-features = false }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
mongodb = "2.8.2"
openssl = { version = "0.10.62", features = ["vendored"] }
paste = "1.0.14"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.18", default-features = true, features = ["json"] }
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
thiserror = "1.0.57"
tinyvec = { version = "1.6.0", features = ["alloc", "serde", "rustc_1_55"] }
tokio = "1.32.0"
tracing = { version = "0.1.37", default-features = false, features = [
    "valuable",
] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "fmt",
    "ansi",
], default-features = false }
tracing-test = "0.2.4"
tracing-unwrap = { version = "0.10.0", default-features = false }
time = "0.3.36"
backoff = { version = "0.4.0", features = ["tokio"] }
slimebot_macros = { path = "./macros" }
url = { version = "2.5.1", features = ["serde"] }
base64 = "0.22.1"
thisslime = { git = "https://github.com/perpetualcacophony/thisslime" }

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-mongo = "0.1.3"

[build-dependencies]
built = { version = "0.7.3", features = ["git2"] }
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
